每日推荐页面 登录页面 排行榜的 基本功能完成

--- a/src/common/css/reset.css
+++ b/src/common/css/reset.css
@@ -9131,3 +9131,13 @@ body{margin:0; padding:0;background: #f7f7f7;
 {
     background-image: linear-gradient(to right top, #052137, #004d6b, #008099, #00b5b7, #12ebc5) !important;
 }
+@font-face {
+    font-family: 'webfont';
+    font-display: swap;
+    src: url('//at.alicdn.com/t/webfont_dbr8retfg18.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/webfont_dbr8retfg18.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('//at.alicdn.com/t/webfont_dbr8retfg18.woff2') format('woff2'),
+    url('//at.alicdn.com/t/webfont_dbr8retfg18.woff') format('woff'), /* chrome、firefox */
+    url('//at.alicdn.com/t/webfont_dbr8retfg18.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('//at.alicdn.com/t/webfont_dbr8retfg18.svg#NotoSansHans-Black') format('svg'); /* iOS 4.1- */
+}
