--- a/src/views/NetPlayer.less
+++ b/src/views/NetPlayer.less
@@ -1,4 +1,6 @@
 .net-player {
+  width: 100%;
+  height: 100%;
   .normal-player {
     position: fixed;
     top: 0;
@@ -6,6 +8,7 @@
     bottom: 0;
     right: 0;
     z-index:10;
+    background-color: rgba(0, 0, 0, 0.7);
     .background {
       position: absolute;
       top: 0;
@@ -28,6 +31,26 @@
         left: 0;
         right: 0;
         background-color: rgba(0,0,0,0.7);
+      }
+    }
+    .music-pole {
+      position: absolute;
+      top: 125px;
+      width: 120px;
+      height: 234px;
+      background-color: transparent;
+      left: 50%;
+      z-index: 15;
+      margin-left: -44px;
+      background-image: url("./needle.png");
+      background-size: 120px 234px;
+      transform-origin: 0 0;
+      transition: all 1s;
+      &.rateCls {
+        transform: rotate(0deg);
+      }
+      &.pase_rateCls {
+        transform: rotate(-20deg);
       }
     }
     .top {
@@ -96,6 +119,15 @@
           height: 266px;
           z-index: 10;
           position: absolute;
+          &.rotate {
+            animation-name: rotate;
+            animation-duration: 20s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+          }
+          &.rotate_pause {
+            animation-play-state: paused;
+          }
           .image {
             width: 100%;
             height: 100%;
@@ -139,42 +171,6 @@
           font-size: 31px;
         }
       }
-      .progress {
-        display: flex;
-        justify-content: space-between;
-        color: rgb(185,191,200);
-        margin-top: 37px;
-        align-items: center;
-        /*position: relative;*/
-        .time {
-          font-size: 10px;
-          flex: 0 0 33px;
-          width: 33px;
-        }
-        .progress-bar {
-          flex: 1;
-          height: 3px;
-          background-color: rgb(94,105,125);
-          margin: 0 17px;
-          position: relative;
-          .progress-circle {
-            width: 9px;
-            height: 9px;
-            border-radius: 50%;
-            background-color:rgb(254,254,254);
-            position: absolute;
-            bottom: -4.5px;
-            left: 0;
-          }
-          .progress-inner-bar {
-            height: 3px;
-            top: 0;
-            position: absolute;
-            left: 0;
-            background-color: red;
-          }
-        }
-      }
       .operator_2 {
         display: flex;
         justify-content: space-between;
@@ -203,6 +199,66 @@
       }
     }
   }
+  .mini-player {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 82px;
+    z-index: 10;
+    right: 0;
+    background-color: var(--body-bgcolor);
+    color: var(--font-color);
+    border-top: 1px solid rgb(230,230,230);
+    padding: 0 24px;
+    display: flex;
+    box-sizing: border-box;
+    .mini-icon {
+      width: 55px;
+      height: 55px;
+      flex: 0 0 55px;
+      font-size: 0;
+      margin-top: 7px;
+      &.rotate {
+        animation-name: rotate;
+        animation-duration: 20s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
+      &.rotate_pause {
+        animation-play-state: paused;
+      }
+      .image {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+      }
+    }
+    .text {
+      flex: 1;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      margin-left: 13px;
+      .singer-name {
+        font-size: 12px;
+      }
+    }
+    .control {
+      flex: 0 0 42px;
+      display: flex;
+      align-items: center;
+      margin-right: 40px;
+      &:last-child {
+        margin-right:0 ;
+      }
+      .iconbofang3 {
+        font-size: 42px;
+      }
+      .iconliebiao {
+        font-size: 42px;
+      }
+    }
+  }
 }
 .net-player {
   /deep/ .van-notice-bar {
@@ -211,3 +267,15 @@
     text-align: center;
   }
 }
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  //50% {
+  //  transform: rotate(180deg);
+  //}
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
