--- a/src/views/NetPlayer.less
+++ b/src/views/NetPlayer.less
@@ -33,26 +33,6 @@
         background-color: rgba(0,0,0,0.7);
       }
     }
-    .music-pole {
-      position: absolute;
-      top: 125px;
-      width: 120px;
-      height: 234px;
-      background-color: transparent;
-      left: 50%;
-      z-index: 15;
-      margin-left: -44px;
-      background-image: url("./needle.png");
-      background-size: 120px 234px;
-      transform-origin: 0 0;
-      transition: all 1s;
-      &.rateCls {
-        transform: rotate(0deg);
-      }
-      &.pase_rateCls {
-        transform: rotate(-20deg);
-      }
-    }
     .top {
       display: flex;
       justify-content: space-between;
@@ -95,51 +75,104 @@
     }
     .middle {
       position: fixed;
-      top: 270px;
+      top: 125px;
       left: 67px;
       right: 67px;
-      height: 406px;
+      bottom: 218px;
       border-radius: 50%;
-      background-color: rgba(0,0,0,0.1);
       display: flex;
       align-items: center;
       justify-content: center;
-      .inner-circle {
+      .cd {
         width: 100%;
         height: 100%;
-        border-radius: 50%;
-        background-image: url("https://s3.music.126.net/mobile-new/img/disc-plus.png?b700b62e1971b351dcb8b8ce1c9ceea3=");
-        background-size: 100% 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         position: relative;
-        .album-img {
-          width: 266px;
-          height: 266px;
-          z-index: 10;
+        .inner-circle {
           position: absolute;
-          &.rotate {
-            animation-name: rotate;
-            animation-duration: 20s;
-            animation-iteration-count: infinite;
-            animation-timing-function: linear;
+          top: 50%;
+          left: 50%;
+          width: 394px;
+          height: 394px;
+          transform: translate3d(-50%,-50%,0);
+          border-radius: 50%;
+          background-image: url("https://s3.music.126.net/mobile-new/img/disc-plus.png?b700b62e1971b351dcb8b8ce1c9ceea3=");
+          background-size: 100% 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .album-img {
+            width: 266px;
+            height: 266px;
+            z-index: 10;
+            position: absolute;
+            &.rotate {
+              animation-name: rotate;
+              animation-duration: 20s;
+              animation-iteration-count: infinite;
+              animation-timing-function: linear;
+            }
+            &.rotate_pause {
+              animation-play-state: paused;
+            }
+            .image {
+              width: 100%;
+              height: 100%;
+              border-radius: 50%;
+            }
           }
-          &.rotate_pause {
-            animation-play-state: paused;
+        }
+        .music-pole {
+          position: absolute;
+          top: 0;
+          width: 120px;
+          height: 190px;
+          background-color: transparent;
+          left: 50%;
+          z-index: 15;
+          margin-left: -44px;
+          background-image: url("./needle.png");
+          background-size: 120px 190px;
+          transform-origin: 0 0;
+          transition: all 1s;
+          &.rateCls {
+            transform: rotate(0deg);
           }
-          .image {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
+          &.pase_rateCls {
+            transform: rotate(-20deg);
           }
+        }
+        .current-text {
+          position: absolute;
+          bottom: 20px;
+          left: 0;
+          right: 0;
+          text-align: center;
+          font-size: 14px;
+          color: #ffffff;
+          font-weight: 600;
+        }
+      }
+      .lyric {
+        width: 100%;
+        height: 100%;
+        font-size: 23px;
+        line-height: 65px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        color: rgb(153,153,153);
+        z-index: -1;
+        text-align: center;
+        .current {
+          font-weight: 600;
+          color: #ffffff;
         }
       }
     }
     .bottom {
       position: fixed;
       bottom: 31px;
-      height: 192px;
       left: 30px;
       right: 30px;
       .operator_1{
@@ -177,7 +210,7 @@
         align-items: center;
         color: rgb(185,191,200);
         padding: 0 46px;
-        margin-top: 31px;
+        margin-top: 25px;
         .iconloop {
           font-size: 28px;
         }
@@ -252,6 +285,9 @@
         margin-right:0 ;
       }
       .iconbofang3 {
+        font-size: 42px;
+      }
+      .iconbofang2 {
         font-size: 42px;
       }
       .iconliebiao {
