--- a/src/views/NetPlayer.less
+++ b/src/views/NetPlayer.less
@@ -8,7 +8,7 @@
     bottom: 0;
     right: 0;
     z-index:10;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: #222;
     .background {
       position: absolute;
       top: 0;
@@ -237,7 +237,7 @@
     left: 0;
     bottom: 0;
     height: 82px;
-    z-index: 10;
+    z-index: 100;
     right: 0;
     background-color: var(--body-bgcolor);
     color: var(--font-color);
