1.实现了退出登录 2.收藏 播放时缓存数据

--- a/src/views/NetPlayer.less
+++ b/src/views/NetPlayer.less
@@ -181,8 +181,12 @@
         color: rgb(185,191,200);
         padding: 0 46px;
         align-items: center;
-        .iconshoucang {
+        .iconshoucang3 {
           font-size: 31px;
+        }
+        .iconcollection {
+          font-size: 31px;
+          color: #8f342d;
         }
         .icondibar-xiazai {
           font-size: 31px;
