1.我的页面 搜索页面 mv页面的 静态图 完成 2.了解了vant可以定制主题

--- a/src/common/less/variable.less
+++ b/src/common/less/variable.less
@@ -13,3 +13,11 @@
 @font_size_giant-s:30px;
 @font_size_giant:32px;
 @font_size_giant-l:34px;
+/*
+*字体颜色
+*/
+@font-black:rgb(51,51,51);
+@font-white:rgb(255,255,255);
+@font-light-gray:rgb(204,204,204);
+@font-deep-gray:rgb(153,153,153);
+@font-red:rgb(255,52,49);
