--- a/src/views/NetPlayer.less
+++ b/src/views/NetPlayer.less
@@ -75,10 +75,10 @@
     }
     .middle {
       position: fixed;
-      top: 125px;
+      top: 10.9%;
       left: 67px;
       right: 67px;
-      bottom: 218px;
+      bottom: 19%;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -125,13 +125,13 @@
           position: absolute;
           top: 0;
           width: 120px;
-          height: 190px;
+          height: 270px;
           background-color: transparent;
           left: 50%;
           z-index: 15;
           margin-left: -44px;
           background-image: url("./needle.png");
-          background-size: 120px 190px;
+          background-size: 120px 270px;
           transform-origin: 0 0;
           transition: all 1s;
           &.rateCls {
