1.优化了播放的进度条 2.优化了歌词报错 3.新建了卡片组件 实现多组件的复用

--- a/src/views/NetPlayer.less
+++ b/src/views/NetPlayer.less
@@ -78,7 +78,7 @@
       top: 10.9%;
       left: 67px;
       right: 67px;
-      bottom: 19%;
+      bottom: 20%;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -150,6 +150,9 @@
           font-size: 14px;
           color: #ffffff;
           font-weight: 600;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
         }
       }
       .lyric {
@@ -162,7 +165,7 @@
         left: 0;
         overflow: hidden;
         color: rgb(153,153,153);
-        z-index: -1;
+        z-index: 14;
         text-align: center;
         .current {
           font-weight: 600;
