--- a/src/views/NetPlayer.less
+++ b/src/views/NetPlayer.less
@@ -1,6 +1,10 @@
+@import '../common/less/variable.less';
+@import '../common/less/mixin.less';
 .net-player {
   width: 100%;
   height: 100%;
+  /deep/ .van-popup--round {
+  }
   .normal-player {
     position: fixed;
     top: 0;
