--- a/src/views/NetPlayer/NetPlayer.less
+++ b/src/views/NetPlayer/NetPlayer.less
@@ -1,5 +1,5 @@
-@import '../common/less/variable.less';
-@import '../common/less/mixin.less';
+@import "../../common/less/variable";
+@import '../../common/less/mixin.less';
 .net-player {
   width: 100%;
   height: 100%;
