修复热更新 优化一些代码细节

--- a/src/common/css/reset.css
+++ b/src/common/css/reset.css
@@ -2,6 +2,14 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@font-face {
+    font-family: 'myFont'; 
+    src: url('../font/aaa.ttf'); 
+    font-weight: normal;
+    font-style: normal;
+  }
+
+
 
 html,
 body,
@@ -90,7 +98,7 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    font-family: "Microsoft Yahei";
+    font-family: myFont;
 }
 
 
@@ -164,31 +172,31 @@ body {
 
 @-webkit-keyframes line-scale-pulse-out {
     0% {
-        -webkit-transform: scaley(1);
-        transform: scaley(1);
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
     }
     50% {
-        -webkit-transform: scaley(0.4);
-        transform: scaley(0.4);
+        -webkit-transform: scaleY(0.4);
+        transform: scaleY(0.4);
     }
     100% {
-        -webkit-transform: scaley(1);
-        transform: scaley(1);
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
     }
 }
 
 @keyframes line-scale-pulse-out {
     0% {
-        -webkit-transform: scaley(1);
-        transform: scaley(1);
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
     }
     50% {
-        -webkit-transform: scaley(0.4);
-        transform: scaley(0.4);
+        -webkit-transform: scaleY(0.4);
+        transform: scaleY(0.4);
     }
     100% {
-        -webkit-transform: scaley(1);
-        transform: scaley(1);
+        -webkit-transform: scaleY(1);
+        transform: scaleY(1);
     }
 }
 
@@ -215,16 +223,4 @@ body {
 .line-scale-pulse-out>div:nth-child(5) {
     -webkit-animation-delay: -0.2s !important;
     animation-delay: -0.2s !important;
-}
-
-@font-face {
-    font-family: 'webfont';
-    font-display: swap;
-    src: url('//at.alicdn.com/t/webfont_dbr8retfg18.eot');
-    /* IE9*/
-    src: url('//at.alicdn.com/t/webfont_dbr8retfg18.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('//at.alicdn.com/t/webfont_dbr8retfg18.woff2') format('woff2'), url('//at.alicdn.com/t/webfont_dbr8retfg18.woff') format('woff'), /* chrome、firefox */
-    url('//at.alicdn.com/t/webfont_dbr8retfg18.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('//at.alicdn.com/t/webfont_dbr8retfg18.svg#NotoSansHans-Black') format('svg');
-    /* iOS 4.1- */
 }
