--- a/src/views/NetPlayer/NetPlayer.less
+++ b/src/views/NetPlayer/NetPlayer.less
@@ -3,8 +3,6 @@
 .net-player {
   width: 100%;
   height: 100%;
-  /deep/ .van-popup--round {
-  }
   .normal-player {
     position: fixed;
     top: 0;
@@ -281,12 +279,16 @@
     }
     .text {
       flex: 1;
+     
       font-size: 12px;
       display: flex;
       align-items: center;
       margin-left: 13px;
       .singer-name {
+        width: 200px;
+        display: inline-block;
         font-size: 12px;
+        .no-wrap();
       }
     }
     .control {
