--- a/src/views/NetHome/index.less
+++ b/src/views/NetHome/index.less
@@ -199,7 +199,8 @@
 
                     .refresh {
                         font-size: @font_size_medium-s;
-                        font-weight: 600;
+                        font-family: PingFangSC-Medium;
+                        font-weight: 500;
 
                         .iconrefresh {
                             font-size: @font_size_medium-s;
